--- a/style.css
+++ b/style.css
@@ -23,6 +23,9 @@ html {
   display: flex;
   overflow: hidden;
 }
+h5 {
+  color: #002bff;
+}
 
 /* Canvas styles */
 #canvas3ds {
@@ -30,16 +33,11 @@ html {
   width: 50vw !important; /* Example width */
   height: 100vh !important; /* Example height */
   top: 50%; /* Center vertically */
-  left: 70%; /* Center horizontally */
-  transform: translate(-50%, -50%); /* Center the canvas */
+  left: 60%; /* Center horizontally */
+  transform: translate(-50%, -50%) scale(1.5); /* Center the canvas */
   z-index: 999; /* Ensure it is layered on top of particles */
   pointer-events: auto; /* Allows mouse interactions */
-  background-color: rgba(
-    255,
-    0,
-    0,
-    0.2
-  ); /* Semi-transparent red for visibility */
+  background-color: transparent; /* Semi-transparent red for visibility */
 }
 
 #particles-jss {
@@ -63,6 +61,26 @@ html {
   background-size: cover;
   background-position: 50% 50%;
 } /* ---- stats.js ---- */
+#particles-js2 {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  background-color: #000000;
+  background-image: url("");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 50% 50%;
+}
+#particles-js3 {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  background-color: #000000;
+  background-image: url("");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 50% 50%;
+}
 .count-particles {
   background: #000022;
   position: absolute;
@@ -113,6 +131,14 @@ h1 {
   font-size: 90px;
   left: 5%;
   top: 10%;
+}
+p {
+  position: relative;
+  color: rgb(255, 255, 255);
+  font-size: 10px;
+  left: 5%;
+  top: 45%;
+  width: 20%;
 }
 
 .content {
