--- a/style.css
+++ b/style.css
@@ -74,16 +74,7 @@ h4 {
   background-size: cover;
   background-position: 50% 50%;
 } /* ---- stats.js ---- */
-#particles-js2 {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  background-color: #000000;
-  background-image: url("");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: 50% 50%;
-}
+
 #particles-js3 {
   position: relative;
   width: 100%;
@@ -315,4 +306,137 @@ p {
   background: transparent; /* Make the background transparent on hover */
 }
 h6 {
+  padding-bottom: 0%;
+  position: absolute;
+  color: rgb(255, 255, 255);
+  font-size: 70px;
+  left: 1%;
+  z-index: 9999;
+  top: 5600px;
+  left: 20%;
+  font-size: 120px;
+}
+
+:root {
+  --cards: 4;
+  --cardHeight: 87vh;
+  --cardTopPadding: 1.5em;
+  --cardMargin: 4vw;
+}
+
+.container {
+  position: relative;
+  top: -70vh; /* Move the cards up, overlaying the particle section */
+  width: 90%;
+  margin: 0 auto;
+  z-index: 2;
+  padding: 0 auto;
+  padding-bottom: 0;
+}
+#cards {
+  list-style: none;
+  padding-left: 0;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(var(--cards), var(--cardHeight));
+  gap: var(--cardMargin);
+  margin-bottom: 0%;
+  padding-bottom: 0%;
+  margin-bottom: 0%;
+}
+
+#card1 {
+  --index: 2;
+}
+#card2 {
+  --index: 3;
+}
+#card3 {
+  --index: 4;
+}
+#card4 {
+  --index: 5;
+  margin-bottom: 0%;
+  margin: 0%;
+  padding: 0%;
+  padding-bottom: 0%;
+  margin-bottom: 0%;
+}
+
+.card {
+  position: sticky;
+  top: 0;
+  padding-top: calc(var(--index) * var(--cardTopPadding));
+  padding-bottom: 0%;
+  margin-bottom: 0%;
+}
+
+#card1 .card-body {
+  background-color: #52b2cf;
+}
+#card2 .card-body {
+  /* background-color: #7EC4CF; */
+  background-color: #e5a36f;
+}
+#card3 .card-body {
+  background-color: #9cadce;
+}
+#card4 .card-body {
+  background-color: #d4afb9;
+  margin-bottom: 0%;
+  margin: 0%;
+  padding: 0%;
+}
+
+.card-body {
+  box-sizing: border-box;
+  padding: 0px;
+  border-radius: 50px;
+  box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.3);
+  height: var(--cardHeight);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.5s;
+  padding-bottom: 0%;
+  margin-bottom: 0%;
+}
+
+h2 {
+  font-size: 2.5em;
+}
+#particles-js2 {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  background-color: #000000;
+  background-image: url("");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 50% 50%;
+  z-index: 1;
+  background-attachment: fixed;
+}
+#Projects {
+  background: black;
+  padding-bottom: 0%;
+  margin-bottom: 0%;
+}
+.card:hover .card-body {
+  transform: scale(1.05);
+  box-shadow: 0 0 40px rgba(0, 0, 0, 0.5);
+}
+.bungee-spice-regular {
+  font-family: "Bungee Spice", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+.honk-uni {
+  font-family: "Honk", system-ui;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  font-variation-settings: "MORF" 15, "SHLN" 50;
+  font-size: 100px;
+  letter-spacing: 7px;
 }
