--- a/style.css
+++ b/style.css
@@ -22,6 +22,8 @@ html {
   height: 100vh; /* Full viewport height */
   display: flex;
   overflow: hidden;
+  padding: 0px;
+  padding-right: 0%;
 }
 
 h3 {
@@ -82,6 +84,8 @@ h4 {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 50% 50%;
+  z-index: 0;
+  padding: 0px;
 }
 .count-particles {
   background: #000022;
@@ -446,27 +450,4 @@ h2 {
 
 *::-webkit-scrollbar {
   display: none; /* Chrome, Safari, Opera */
-}
-.email {
-  margin: 0;
-  padding: 0;
-  height: auto;
-}
-h5 {
-  margin: 0;
-  padding: 0;
-  padding-bottom: 0%;
-  top: 50%;
-  left: 10%;
-  color: white;
-  font-size: 30px;
-  position: relative;
-}
-p {
-  margin: 0;
-  padding: 0;
-  padding-bottom: 0%;
-  position: relative;
-  top: 10%;
-  font-size: 20px;
 }
