--- a/main.css
+++ b/main.css
@@ -33,3 +33,98 @@ p {
   top: 10%;
   font-size: 10px;
 }
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+ul#cards {
+  list-style-type: none;
+  padding: 0;
+}
+
+.card {
+  margin: 0px;
+}
+
+.mac-window {
+  width: 1200px; /* Adjust the width as per your need */
+  background-color: #2d2d2d;
+  border-radius: 10px;
+  box-shadow: 0 10px 20px #02020266;
+  overflow: hidden;
+  border: 1px solid #444; /* Optional: For a light border around the card */
+  padding-bottom: 20px;
+}
+
+.window-header {
+  display: flex;
+  align-items: center;
+  padding: 10px 15px;
+  background-color: #272727; /* Darker header for window top bar */
+  border-bottom: 1px solid #444;
+}
+
+.window-buttons {
+  display: flex;
+  gap: 8px;
+}
+
+.window-button {
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  display: inline-block;
+}
+
+.window-button.red {
+  background-color: #ff5f56;
+}
+
+.window-button.yellow {
+  background-color: #ffbd2e;
+}
+
+.window-button.green {
+  background-color: #27c93f;
+}
+
+.card-body {
+  padding: 90px;
+  color: #dcdcdc; /* Text color for better readability */
+}
+
+.card-body h2 {
+  color: #ffffff;
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+
+.card-body p {
+  font-size: 14px;
+  line-height: 1.6;
+  color: #a0a0a0;
+}
+
+button {
+  padding: 10px 20px;
+  background-color: #3e3e3e;
+  color: #ffffff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #575757;
+}
+.mac-window:hover {
+  transform: scale(1.05);
+  box-shadow: 0 0 40px rgba(0, 0, 0, 0.5);
+}
+.window-header:hover {
+  transform: scale(1.05);
+  box-shadow: 0 0 40px rgba(0, 0, 0, 0.5);
+}
