--- a/style.css
+++ b/style.css
@@ -322,7 +322,7 @@ h6 {
 :root {
   --cards: 4;
   --cardHeight: 87vh;
-  --cardTopPadding: 1.5em;
+  --cardTopPadding: 1.9em;
   --cardMargin: 4vw;
 }
 
@@ -374,17 +374,23 @@ h6 {
 }
 
 #card1 .card-body {
-  background-color: #52b2cf;
+  background-color: #070707;
 }
 #card2 .card-body {
   /* background-color: #7EC4CF; */
-  background-color: #e5a36f;
+  background-color: #0c0a09;
 }
 #card3 .card-body {
-  background-color: #9cadce;
+  background-image: linear-gradient(180deg, red, yellow);
 }
 #card4 .card-body {
-  background-color: #d4afb9;
+  background: rgb(0, 0, 0);
+  background: linear-gradient(
+    90deg,
+    rgba(0, 0, 0, 1) 36%,
+    rgba(88, 19, 132, 1) 74%,
+    rgba(69, 5, 100, 1) 100%
+  );
   margin-bottom: 0%;
   margin: 0%;
   padding: 0%;
@@ -424,10 +430,7 @@ h2 {
   padding-bottom: 0%;
   margin-bottom: 0%;
 }
-.card:hover .card-body {
-  transform: scale(1.05);
-  box-shadow: 0 0 40px rgba(0, 0, 0, 0.5);
-}
+
 .bungee-spice-regular {
   font-family: "Bungee Spice", sans-serif;
   font-weight: 400;
