--- a/style.css
+++ b/style.css
@@ -374,7 +374,12 @@ h6 {
 }
 
 #card1 .card-body {
-  background-color: #070707;
+  background: rgb(0, 3, 36);
+  background: linear-gradient(
+    16deg,
+    rgba(0, 3, 36, 1) 62%,
+    rgba(107, 11, 196, 0.986453956582633) 100%
+  );
 }
 #card2 .card-body {
   /* background-color: #7EC4CF; */
@@ -386,9 +391,9 @@ h6 {
 #card4 .card-body {
   background: rgb(0, 0, 0);
   background: linear-gradient(
-    90deg,
-    rgba(0, 0, 0, 1) 36%,
-    rgba(88, 19, 132, 1) 74%,
+    23deg,
+    rgba(0, 0, 0, 1) 69%,
+    rgba(88, 19, 132, 1) 82%,
     rgba(69, 5, 100, 1) 100%
   );
   margin-bottom: 0%;
