--- a/style.css
+++ b/style.css
@@ -22,8 +22,9 @@ html {
   height: 100vh; /* Full viewport height */
   display: flex;
   overflow: hidden;
-  padding: 0px;
+  padding: 0%;
   padding-right: 0%;
+  margin: 0%;
 }
 
 h3 {
