--- a/main.css
+++ b/main.css
@@ -1,13 +1,27 @@
 form {
-  background: rgba(27, 31, 34, 0.8);
+  background: rgba(201, 220, 235, 0.8);
+  background: transparent;
   width: 640px;
-  margin: 50px auto;
+  margin: 0;
   max-width: 97%;
   border-radius: 4px;
-  padding: 0px; /* Corrected padding */
-  z-index: 999999;
-  position: relative;
-  z-index: 1;
+  padding: 0; /* Corrected padding */
+  height: 300px;
+  position: absolute;
+  z-index: 10;
+  top: 30%;
+  left: 30%;
+  color: #27c93f;
+}
+.message {
+  background: transparent;
+  margin: 0;
+  max-width: 97%;
+  padding: 0;
+  position: absolute;
+  z-index: 10;
+  top: 40%;
+  left: 10%;
 }
 
 .email {
@@ -23,8 +37,8 @@ h5 {
   margin: 0;
   padding: 0;
   display: inline-block;
-  top: 20%;
-  left: 1%;
+  top: 60%;
+  left: 60%;
   font-size: 30px;
   position: relative;
   padding-bottom: 0%;
@@ -46,6 +60,7 @@ p {
   padding-bottom: 0%;
   position: relative;
   top: 50%;
+  left: 50%;
   font-size: 10px;
   color: #27c93f;
 }
