--- a/main.css
+++ b/main.css
@@ -1,18 +1,18 @@
 form {
-  background: rgba(201, 220, 235, 0.8);
-  background: transparent;
   width: 640px;
   margin: 0;
   max-width: 97%;
-  border-radius: 4px;
+  border-radius: 70px;
+  border-color: white;
   padding: 0; /* Corrected padding */
   height: 300px;
   position: absolute;
   z-index: 10;
-  top: 30%;
-  left: 30%;
-  color: #27c93f;
+  top: 25%;
+  left: 27%;
+  color: #f3faf4;
 }
+
 .message {
   background: transparent;
   margin: 0;
@@ -20,8 +20,8 @@ form {
   padding: 0;
   position: absolute;
   z-index: 10;
-  top: 40%;
-  left: 10%;
+  top: 35%;
+  left: 5%;
 }
 
 .email {
@@ -158,4 +158,116 @@ button:hover {
 .window-header:hover {
   transform: scale(1.05);
   box-shadow: 0 0 40px rgba(0, 0, 0, 0.5);
+}
+
+form .title h2 {
+  letter-spacing: 6px;
+  border-bottom: 1px solid white;
+  display: inline-block;
+  padding-bottom: 8px;
+  margin-bottom: 32px;
+}
+
+form .half {
+  display: flex;
+  justify-content: space-between;
+}
+
+form .half .item {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 24px;
+  width: 48%;
+}
+
+form label {
+  display: block;
+  font-size: 13px;
+  letter-spacing: 3.5px;
+  margin-bottom: 16px;
+}
+
+form .half .item input {
+  border-radius: 4px;
+  border: 1px solid white;
+  outline: 0;
+  padding: 16px;
+  width: 100%;
+  height: 44px;
+  background: transparent;
+  font-size: 17px;
+}
+.TC {
+  color: white;
+}
+form .full {
+  margin-bottom: 24px;
+}
+
+form .full textarea {
+  background: transparent;
+  border-radius: 4px;
+  border: 1px solid white;
+  outline: 0;
+  padding: 12px 16px;
+  width: 100%;
+  height: 200px;
+  font-size: 17px;
+}
+
+form .action {
+  margin-bottom: 32px;
+}
+
+form .action input {
+  background: transparent;
+  border-radius: 4px;
+  color: white;
+  cursor: pointer;
+  font-size: 13px;
+  font-weight: 600;
+  height: 44px;
+  letter-spacing: 3px;
+  outline: 0;
+  padding: 0 20px 0 22px;
+  margin-right: 10px;
+}
+
+form .action input[type="submit"] {
+  background: white;
+  color: black;
+}
+
+form .icons a {
+  border: 1px solid white;
+  border-radius: 50%;
+  line-height: 36px;
+  text-align: center;
+  font-weight: 600;
+  width: 38px;
+  margin-right: 10px;
+}
+
+form .half .item input:focus,
+form .full textarea:focus,
+form .action input[type="reset"]:hover,
+form .icons a:hover {
+  background: rgba(255, 255, 255, 0.075);
+}
+
+@media (max-width: 480px) {
+  form .half {
+    flex-direction: column;
+  }
+  form .half .item {
+    width: 100%;
+  }
+  form .action {
+    display: flex;
+    flex-direction: column;
+  }
+  form .action input {
+    margin-bottom: 10px;
+    width: 100%;
+  }
 }
