--- a/style.css
+++ b/style.css
@@ -390,12 +390,12 @@ h6 {
   background-image: linear-gradient(180deg, red, yellow);
 }
 #card4 .card-body {
-  background: rgb(0, 0, 0);
+  background: rgb(0, 3, 36);
   background: linear-gradient(
-    23deg,
-    rgba(0, 0, 0, 1) 69%,
-    rgba(88, 19, 132, 1) 82%,
-    rgba(69, 5, 100, 1) 100%
+    16deg,
+    rgba(0, 3, 36, 1) 33%,
+    rgba(118, 8, 134, 1) 54%,
+    rgba(107, 11, 196, 0.986453956582633) 81%
   );
   margin-bottom: 0%;
   margin: 0%;
@@ -405,7 +405,7 @@ h6 {
 .card-body {
   box-sizing: border-box;
   padding: 0px;
-  border-radius: 50px;
+  border-radius: 10px;
   box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.3);
   height: var(--cardHeight);
   display: flex;
